Création de la _thumbmail doctor ET affichage dynamique des réseaux sociaux

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -304,6 +304,11 @@ footer.main-footer table.opening-hours tr td.hours {
 /**
     DOCTORS
  */
+/** Afficher un / entre les deux skills des docteurs */
+.doctors .doctor-details .doctor-skills > span:not(:last-child):after {
+    content: "/";
+}
+
 .doctors {
     margin: 1em 0;
 }
