--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,9 +54,15 @@
                     <li><a href="#">La maison médicale</a></li>
                     <li><a href="{{ path('doctor_index') }}">Nos docteurs</a></li>
                     <li><a href="#">Nous contacter</a></li>
+                    <!-- Afficher "Déconnexion" si connecté +lien déconnexion/logout,
+                        afficher "Administration" si admin +lien easyadmin,
+                     ET afficher "Connexion" si déconnecter +lien connexion/login  -->
                     {% if app.user %}
                         <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
-                        {% else %}
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li><a href="{{ path('easyadmin') }}">Administration</a></li>
+                        {% endif %}
+                    {% else %}
                           <li><a href="{{ path('app_login') }}">Connexion</a></li>
                     {% endif %}
                 </ul>
